# multi-level-rl-for-robotics

./: .coverage  .gitignore  .readthedocs.yml  .travis.yml  Dockerfile  Guidelines.md  LICENSE  MANIFEST  MANIFEST.in  README.md  TODO  diff.py  lidar1d_example.py  lidar2d_fast.cpp  lidar2d_fast.html  lidar2d_trial.py  main.py  navrep_schema.txt  planner_env.py  policy_choose.py  pyproject.toml  requirements.txt  requirements_for_test.txt  reward.txt  robot_logs.csv  robot_logs_eval.csv  setup.py  teacher_env.py  test.py  tox.ini  train_robot.py
.github/: pull_request_template.md
MultiAgent_training/: env_wrapper.py  tf_models.py  training.py
agents/: agent.py  robot.py
callbacks/: robot_callback.py
configs/: colors.py  robot_env.config  teacher_env.config
cython_packages/: convex_hull.pyx
docker/: docker-compose.yml
docs/: requirements.txt
envs/: env.py  env_encoders.py  key_controlled_env.py  old_env.py  robot_env.py  teacher_env.py
examples/: lidar1d_example.py
lidar_setup/: lidar2d_fast.cpp  lidar2d_fast.pyx  rings.py  setup.py
meow/: meow.py
obstacle/: obstacles.py  single_obstacle.py  singleobstacle.py
planner/: planner.py
policy/: ActorCritic_with_LSTM.py  ActorCritic_with_Transformer.py  custom_policy.py  linear_policy.py  orca.py  policy.py  policy_generator.py  policy_networks.py  robot_feature_extractor.py
runs/: events.out.tfevents.1676414144.heakl-Lenovo-Legion-5-15IMH05H.497037.0  events.out.tfevents.1676414144.heakl-Lenovo-Legion-5-15IMH05H.497037.1  events.out.tfevents.1676414751.heakl-Lenovo-Legion-5-15IMH05H.499209.0  events.out.tfevents.1676414751.heakl-Lenovo-Legion-5-15IMH05H.499209.1  events.out.tfevents.1676414751.heakl-Lenovo-Legion-5-15IMH05H.499209.2  events.out.tfevents.1676414751.heakl-Lenovo-Legion-5-15IMH05H.499209.3  events.out.tfevents.1676416373.heakl-Lenovo-Legion-5-15IMH05H.501998.0  events.out.tfevents.1676416373.heakl-Lenovo-Legion-5-15IMH05H.501998.1  events.out.tfevents.1676416373.heakl-Lenovo-Legion-5-15IMH05H.501998.2  events.out.tfevents.1676416373.heakl-Lenovo-Legion-5-15IMH05H.501998.3  events.out.tfevents.1676416405.heakl-Lenovo-Legion-5-15IMH05H.502200.0  events.out.tfevents.1676416405.heakl-Lenovo-Legion-5-15IMH05H.502200.1  events.out.tfevents.1676416405.heakl-Lenovo-Legion-5-15IMH05H.502200.2  events.out.tfevents.1676416405.heakl-Lenovo-Legion-5-15IMH05H.502200.3  events.out.tfevents.1677033189.heakl-Lenovo-Legion-5-15IMH05H.63455.0  events.out.tfevents.1677033189.heakl-Lenovo-Legion-5-15IMH05H.63455.1
scripts/: linters_parser.py
src/: lidar2d_fast.cp310-win_amd64.pyd
test/: __init__.py  requirements.txt  test_LidarRings.py  test_agent.py  test_calculations.py  test_obstacles.py  test_planner.py  test_plannerchecker.py  test_teacherchecker.py
utils/: agent.py  basepygletenv.py  calculations.py  callback.py  human.py  lidar_rings.py  parser.py  planner_checker.py  robot.py
(+99 files in other folders)
